# super-agent-party

./: AGENTS.md  README.md  README_AR.md  README_DE.md  README_ES.md  README_FR.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  README_ZH.md  main.js  package-lock.json  package.json  pyproject.toml  server.py
LICENSE-third-party/: Open-Runde.txt  node_licenses.csv
config/: settings_template.json
docs/superpowers/plans/: 2025-07-09-calendar-panel.md  2026-07-08-dynamic-island-redesign.md
docs/superpowers/specs/: 2025-07-09-calendar-panel-design.md  2026-07-08-dynamic-island-redesign-design.md  2026-07-08-ripple-features-integration-design.md  2026-07-08-ripple-features-into-sap-island-design.md  2026-07-08-ripple-features-port-to-sap-island-design.md
py/: cdp_tool.py  cli_tool.py  computer_use_tool.py  diary_api.py  diary_chat_integration.py  diary_engine.py  diary_query_tool.py  diary_system.py  dingtalk_bot_manager.py  discord_bot_manager.py  dynamic_island.py  ext_cdp.py  extensions.py  feishu_bot_manager.py  get_setting.py  local_app_control.py  mode_change.py  qq_bot_manager.py  shortcut_commands.py  skills.py  slack_bot_manager.py  sub_agent.py  task_center.py  telegram_client.py  tha_engine.py  twitch_service.py  utility_tools.py  vts_manager.py  web_search.py  wechat_bot_manager.py  wecom_bot_manager.py
scripts/: anime4k-entry.js  smoke-check.js
skills/sap-extension-creator/: SKILL.md
skills/sap-extension-creator/assets/node-template/: index.html  index.js  package.json
skills/sap-extension-creator/assets/static-template/: index.html  package.json
skills/sap-extension-creator/references/: node-entry-spec.md  package-json-spec.md
static/: chat.html  index.html  island-app.js  island.html  minimal.html  skeleton.html  sw.js  tha.html
static/css/: island.css  styles.css  transition.css
static/js/: island-app.js  preload.js  renderer.js  tha.js  vendor_params.js  vrm.js  vue_data.js  vue_methods.js
static/js/locales/: en-US.js  zh-CN.js
static/libs/: anime4k-sr.bundle.js
