[project]
name = "super-agent-party"
version = "v0.4.2"
description = "超级智能体派对v0.4.2 | 轻松链接一切!"
license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "aiosqlite>=0.21.0",
    "appdirs>=1.4.4",
    "bs4>=0.0.2",
    "docstring-parser>=0.16",
    "faiss-cpu>=1.10.0",
    "fastapi-mcp>=0.3.4",
    "fastapi>=0.115.12",
    "langchain-community>=0.3.22",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.14",
    "mcp>=1.6.0",
    "nest-asyncio>=1.6.0",
    "odfpy>=1.4.1",
    "openai>=1.76.0",
    "openpyxl>=3.1.5",
    "pypdf2>=3.0.1",
    "python-a2a[all]>=0.5.6",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "pywin32>=310 ; sys_platform == 'win32'",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "shortuuid>=1.0.13",
    "striprtf>=0.0.29",
    "tavily-python>=0.7.0",
    "tzlocal>=5.3.1",
    "uvicorn[standard]>=0.34.2",
    "mem0ai==1.0.0",
    "e2b-code-interpreter>=1.5.0",
    "qq-botpy>=1.2.1",
    "duckduckgo-search>=8.0.3",
    "langchain-google-community>=2.0.7",
    "langchain-exa>=0.3.0",
    "ollama>=0.5.1",
    "scipy>=1.16.0",
    "edge-tts>=7.0.2",
    "brotli>=1.1.0",
    "wikipedia-api>=0.8.1",
    "arxiv>=2.2.0",
    "anyio>=4.9.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "ddgs>=9.5.4",
    "aiofiles>=25.1.0",
    "sherpa-onnx>=1.12.19",
    "soundfile>=0.13.1",
    "nvidia-ml-py>=13.580.82",
    "pip-licenses>=5.5.0",
    "google-api-python-client>=2.179.0",
    "lark-oapi>=1.4.24",
    "pydub>=0.25.1",
    "imageio-ffmpeg>=0.6.0",
    "discord-py>=2.6.4",
    "pyinstaller>=6.17.0",
    "onnxruntime>=1.24.0 ; sys_platform == 'darwin'",
    "onnxruntime-directml>=1.24.0 ; sys_platform == 'win32'",
    "onnxruntime-gpu>=1.24.0 ; sys_platform != 'darwin' and sys_platform != 'win32' and platform_machine != 'aarch64'",
    "onnxruntime>=1.24.0 ; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "coremltools>=8.0 ; sys_platform == 'darwin'",
    "transformers>=4.57.3",
    "pyttsx3>=2.99",
    "xlrd>=2.0.2",
    "tetos>=0.4.2",
    "langchain-classic>=1.0.1",
    "slack-sdk>=3.39.0",
    "dingtalk-stream>=0.24.3",
    "pyautogui>=0.9.54",
    "elevenlabs>=2.41.0",
    "litellm>=1.83.7",
    "wecom-aibot-python-sdk>=1.0.2",
    "wechatbot-sdk>=0.2.0",
    "qrcode>=8.2",
    "sentencepiece>=0.2.1",
    "huggingface-hub>=1.7.1",
    "modelscope>=1.35.4",
    "pillow>=12.2.0",
    "simplejpeg>=1.7.6",
    "pyasn1>=0.6.3",
    "lxml>=6.1.0",
    "langchain-core>=1.2.28",
    "zerobox>=0.1.5 ; sys_platform != 'win32'",
    "uiautomation>=2.0.9 ; sys_platform == 'win32'",
    "pyobjc-framework-ApplicationServices>=10.3 ; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.3 ; sys_platform == 'darwin'",
    "python3-pyatspi>=1.19.0 ; sys_platform == 'linux'",
]
